[tool.poetry]
name = "gym_minipupper"
version = "0.0.1"
description = "Gym environments for MangDang Minipupper"
authors = ["Arthur Bridi Guazzelli <arthur.b.guazzelli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pybullet = "^3.2.5"
gym = "0.21"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
